# transazioniFinanziarie

./: CMakeLists.txt  acquisto.cpp  acquisto.h  bonifico.cpp  bonifico.h  conto.cpp  conto.h  main.cpp  transazione.cpp  transazione.h
dati/: 1.csv  2.csv  3.csv  listaConti.csv  listaConti.txt  transazioni.csv
test/: CMakeLists.txt  contoTest.cpp  runAllTests.cpp  testFixture.cpp  transazioneTest.cpp
